# sfml_sound_player

./: CMakeLists.txt  README.md  loadConfig.xml
include/: sound_player.h
include/sound_player/: sound_player_utils.h
src/: interface.cpp  sound_player.cpp
